tweak(interface): fix sidebar alignment of special content due to misalignment caused by recent refactors

--- a/theme.css
+++ b/theme.css
@@ -2803,14 +2803,15 @@ body:not(.is-mobile) .mod-sidedock .workspace-leaf-content:is(
 	background-color: var(--background-primary);
 	border-radius: var(--radius-ml);
 	box-shadow: var(--shadow-sidebar);
-	width: calc(100% - 8px);
+	width: calc(100% - 16px);
 	height: calc(100% - 10px);
-	margin: 1px 4px 9px;
+	margin: 1px 8px 9px;
 	padding-block-end: 0;
-
+	padding-inline: unset;
 	> .view-content {
 		padding-block-start: 0;
 	}
+	--bases-cards-group-padding: 2px 12px 12px 12px;
 }
 body:not(.is-mobile) .mod-sidedock .workspace-tabs:last-child .workspace-leaf-content:is(
 	[data-type="bases"],
